# ChangeLog for media-video/avidemux
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*avidemux-2.5.0 (27 Jul 2009)

  27 Jul 2009; Dominik Kapusta <d@ayoy.net>
  +files/2.5.0-build-plugins.patch,
  +files/2.5.0-coreImage-parallel-build.patch,
  +files/2.5.0-fake-inst-dir.patch, +files/2.5.0-gcc4.4.patch.gz,
  +files/2.5.0-i18n.patch, +files/2.5.0-multilib.patch.gz,
  +files/2.5.0-ts-parallel-build.patch, +avidemux-2.5.0.ebuild,
  +metadata.xml:
  Version bump (bug #276781). Huge changes to the build system. Dropped
  unconditional dependency on libX11 - fixed upstream. Rewritten patch for
  gcc-4.4, added support for LINGUAS and multilib. Added a patch for faking
  the installation directory inside a build dir (for plugins which require
  the application to be installed). Added support for pulseaudio. Package
  needs attention due to text relocations.

  28 Jun 2009; Markus Meier <maekke@gentoo.org> avidemux-2.4.4-r2.ebuild:
  amd64 stable, bug #272842

  27 Jun 2009; Ben de Groot <yngwin@gentoo.org> -avidemux-2.4.4-r1.ebuild,
  avidemux-2.4.4-r2.ebuild, +files/avidemux-2.4-ts-cmake.patch:
  Add patch to fix possible parallel make issues, thanks to Martin von
  Gagern in bug 272730. Remove old revision.

  26 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  avidemux-2.4.4-r2.ebuild:
  stable x86, bug 272842

  06 Jun 2009; nixnut <nixnut@gentoo.org> avidemux-2.4.4-r2.ebuild:
  ppc stable #272842

*avidemux-2.4.4-r2 (05 Jun 2009)

  05 Jun 2009; Ben de Groot <yngwin@gentoo.org> +avidemux-2.4.4-r2.ebuild:
  Drop arts support (bug 270575). Always depend on libX11 (bug 257019).
  Install translations into the right path (bug 272258). Drop die on distcc
  (bug 261996).

  15 May 2009; Ben de Groot <yngwin@gentoo.org> -avidemux-2.4.4.ebuild,
  avidemux-2.4.4-r1.ebuild, +files/avidemux-2.4.4-gcc-4.4.patch:
  Remove old. Add patch to fix compilation with gcc-4.4 (bug 269114).

*avidemux-2.4.4-r1 (08 May 2009)
