@@ -1,4 +1,4 @@
-AUX 2.5.0-build-plugins.patch 3579 RMD160 a160356c99d0de17e87b839a86d47a80559d32a3 SHA1 d4b4fadeb4d68653abd6b192b4d46d2e04ed7b11 SHA256 59493b8b5007b9cb59979a78bcb3f09be49ba0a1f91be54672a802d6404410ce
+AUX 2.5.0-build-plugins.patch 3596 RMD160 02a71bb0f0fa816985f0d48642dd0ca24b86dcbb SHA1 97f2743c3ddf5fec7f18f122e97e41295c2d6a94 SHA256 d0141ddaa01fffc3da1a35f13c9c3faa3595543248b3dfbdc62b22482e8a32fc
 AUX 2.5.0-coreImage-parallel-build.patch 514 RMD160 22d87e1ea6f6630ba8427b4b30b4534ae2ad9b5b SHA1 7cb9dbac1a4b6cfc020afde08a109cc4d695c674 SHA256 a8c2f806ac9d63f8494aba073aa76c8788ca598d218905ecb8baf78cd2d522f3
 AUX 2.5.0-fake-inst-dir.patch 796 RMD160 8f6adcb23bca60bad9d46256590cc5018d703c90 SHA1 029a1d6fa46cc1c0b9a0aaed53914383a90cc1c9 SHA256 8c323a091a18c1df0a0b3b7d50d91b8b43845150cf85577cde7207f8b6e082d8
 AUX 2.5.0-gcc4.4.patch.gz 2964 RMD160 28753ec58291e085693cd2f4ee91a8b7dcc45d53 SHA1 bb1348c0e41a35ffb6ad32ac135f6c4b2e635273 SHA256 449d4bd368305e184a44b63affd0909bbfbb7a6e66de966227f74ed83d386c0e
@@ -6,6 +6,6 @@ AUX 2.5.0-i18n.patch 1685 RMD160 f624c355778a6aa2e39a5c2b3e9100c76d3870d9 SHA1 c
 AUX 2.5.0-multilib.patch.gz 2143 RMD160 e37886c685ab56f80e9bdc81bee8958fcbef99b4 SHA1 e376b234cca7f98f8d5eb56ee4c1356179354a69 SHA256 1048b895a49e17cc61312527ccc925e9b35fdf31e445950a2c51a9235edc046c
 AUX 2.5.0-ts-parallel-build.patch 467 RMD160 fe45e6ca63b9a7dadcd6e663d1e4c6468d51166c SHA1 2785e2b95efde619910561efda4465598905afb6 SHA256 375bfc02913ff4701142b0001f1f98e7ce4ea81872b0b6edf993faf1a1c8ee81
 DIST avidemux_2.5.0.tar.gz 12806613 RMD160 e2a385af627d41bede2231e62893dbb957e75fc3 SHA1 9697f1a54006e362a361aa609d3bdc1065676fb2 SHA256 9c92a8de1bfa82bd8f01dff27a953434c8042646babe1b0949620de86d449a7a
-EBUILD avidemux-2.5.0.ebuild 4596 RMD160 23fbff1d88abd0aa14706c32e51223fb04ba99e7 SHA1 535d4f9903f550c6270034a00cafd7c74a3730a4 SHA256 73d28236cac0e3121d3cfb85feabfe835d64fef9a1cf45277fcdeda3a75a17b8
-MISC ChangeLog 27169 RMD160 22537ded0e2aee0d0e9ca57f6ceb011b9520c6c7 SHA1 234575783e8a62f9ec0dde39db7fb1cb86636f73 SHA256 8b10b35e15e1bbe0eae9cafbd66cb44d7a6893bd5f0aff1ccf35f03989bd2939
+EBUILD avidemux-2.5.0.ebuild 4921 RMD160 8ed7503f5c09fd0b8bdaabc7d37e79f1c7042b3f SHA1 a5a29a25f551c9e08760fb3b61f8ed74ef2145f5 SHA256 e8d6f4e62b9e1da296c39660ad3ea6d04cd24b00e89891e5236740310026be6c
+MISC ChangeLog 27373 RMD160 cb063dc64781ceec1776bd3be9899936b8b0547f SHA1 fdd5a08bda1314c8e603e59dfccbec98e25ed454 SHA256 4b1f987223d9ae886643975819ee8193775f59bad4d21fec4c02fa69b8b14a86
 MISC metadata.xml 429 RMD160 b32016aaa9b19e2462d493e38f1d9423d8772361 SHA1 05b0451bfb459579447bd43a30104445f59c23ce SHA256 e5416acf63f5b056b0d9148a73d6914b09c78446338f913a9cf709661487790a
